--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "yao_stringutils.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/yymmiinngg/yao-stringutils.git"
   },
-  "author": "",
+  "author": "Monster Yao",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/yymmiinngg/yao-stringutils/issues"
